edu-goods/edu-goods-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edu-goods-deploy
  namespace: edu-goods
  labels:
    app: edu-goods
spec:
  replicas: 2
  selector:
    matchLabels:
      app: edu-goods
  template:
    metadata:
      labels:
        app: edu-goods
    spec:
      containers:
        - name: edu-goods
          image: adelacho/k8s-exam-goods:v0.0.4
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
      imagePullSecrets:
        - name: k8s-goods-dockerhub-secret
          #      nodeSelector:
          #        kubernetes.io/hostname: worker02
